Refine tunnel quota coordination